# dora

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  A2A_COMPARISON.md  CLAUDE.md  Containerfile  Dockerfile  IMPROVEMENT_PLAN.md  PROGRESS_REPORTING.md  README.agents.md  README.md  TESTING.md  TODO.md  demo_calendar_intelligence.py  demo_event_search.py  docker-compose.README.md  docker-compose.agents.yml  docker-compose.dev.yml  docker-compose.yml  dora.py  event-notification-prd.md  plan.md  pyproject.toml  run.sh  run_bot.py  run_http_server.py  run_memory_server.sh  test_progress.py
.github/workflows/: ci.yml
.taskmaster/: state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  tasks.json
agents/: __init__.py  base.py  calendar_intelligence.py  discovery.py  discovery_service.py  enhanced_calendar_builder.py  enhanced_calendar_intelligence.py  event_manager.py  event_search.py  messaging.py  notification_service.py  orchestration_service.py  registry.py
agents/collectors/: __init__.py  event_collector.py  holiday_collector.py  multi_source_collector.py  weather_collector.py
api/: __init__.py
cache/: dora_memory.db
demos/: calendar_intelligence_demo.py
dora/: .env.example  __init__.py  __main__.py  auth.py  cached_processor.py  http_client.py  http_server.py  mcp_client.py  memory_cache.py  message_parser.py  middleware.py  perplexity_proxy_server.py  telegram_bot.py  tools.py  trace_processor.py
dora/agents/: __init__.py  base.py  event_classifier.py  event_finder.py  language_selector.py  orchestrator.py  text_writer.py
dora/database/: __init__.py  connections.py
dora/database/repositories/: __init__.py  (+4 more)
dora/mcp/: __init__.py  memory_server.py  memory_server_config.json
dora/models/: __init__.py  config.py  database_event.py  event.py  messages.py
dora/tests/: __init__.py  conftest.py  test_agents.py  test_http_server.py  test_message_parser.py  test_models.py  test_tools.py
mcp_tools/: __init__.py
models/: __init__.py  a2a.py  calendar_data.py  jsonrpc.py  validation.py
scripts/: init_db.sql  run-agents.sh  run_integration_tests.sh  stop-agents.sh
tests/: __init__.py  test_a2a_collaboration.py  test_a2a_integration.py  test_agent_registry.py  test_base_agent.py  test_base_agent_messaging.py  test_calendar_intelligence.py  test_database_integration.py  test_database_repositories.py  test_discovery_mixin.py  test_enhanced_calendar_builder.py  test_enhanced_data_verifier.py  test_event_finder.py  test_event_manager.py  test_event_search.py  test_events_count.py  test_google_a2a_sdk.py  test_infrastructure.py  test_integration.py  test_jsonrpc_models.py  test_messaging.py  test_multiple_events.py  test_perplexity.py  test_perplexity_direct.py  test_perplexity_simple.py  test_validation.py
traefik-data-dev/: acme.json
