[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dora"
version = "0.1.0"
description = "Dora the Explora - an autonomous event discovery agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "openai-agents<=0.0.14",
    "pytest>=7.0.0",
    "nest-asyncio>=1.5.0",
    "python-telegram-bot>=20.0",
    "mcp",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "aiohttp>=3.12.2",
    "bcrypt>=4.3.0",
    "podman-compose>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.40",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dora"]
